# tldr-news

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
tldr_news/: cli.py  main.css  ui.py  utils.py
