[tool.poetry]
name = "tldr-news"
version = "0.1.0"
description = ""
authors = ["Harry Tran <huytran.quang080199@gmail.com>"]
readme = "README.md"
packages = [{include = "tldr_news"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
click = "^8.1.3"
beautifulsoup4 = "^4.11.2"
textual = "^0.15.1"

[tool.poetry.scripts]
tldr_news = "tldr_news.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
