[tool.poetry]
name = "tldr-news"
version = "0.2.4"
description = ""
authors = ["Harry Tran <huytran.quang080199@gmail.com>"]
readme = "README.md"
packages = [{include = "tldr_news"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
click = "^8.1.3"
beautifulsoup4 = "^4.11.2"
textual = "^0.15.1"

[tool.poetry.scripts]
tldr_news = "tldr_news.cli:cli"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
python-semantic-release = "^7.33.2"

[console_scripts]
tldr_news = "tldr_news.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "tldr_news/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
